# tap-monday

./: .flake8  .gitignore  README.md  key_test.py  meltano.yml  mypy.ini  pyproject.toml  tap-monday.sh  tox.ini
api_test/: __init__.py
tap_monday/: client.py  streams.py  tap.py
tap_monday/schemas/: boards.json  column_values.json  columns.json  groups.json  items.json
tap_monday/tests/: __init__.py  conftest.py  test_config.py  test_core.py  test_streams.py
