[tool.poetry]
name = "tap-monday"
version = "0.1.5"
description = "`tap-monday` is a Singer tap for Monday.com, built with the Meltano Singer SDK."
authors = ["Maksim Sundukov"]
keywords = [
    "ELT",
    "Monday",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.6.2"
requests = "^2.25.1"
singer-sdk = "^0.3.17"
requests-mock = "^1.9.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
requests-mock = "^1.9.3"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
types-requests = "^2.26.1"
isort = "^5.10.1"
mypy = "^0.940"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_monday"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-monday = 'tap_monday.tap:TapMonday.cli'
